feat: Refactor monetary and quantity serialization/deserialization, add unit tests for MonetaryAmount