@@ -1,38 +1,30 @@
 package ca.zhoozhoo.loaddev.components.config;
 
-import java.math.BigDecimal;
-import java.text.ParsePosition;
+import static systems.uom.ucum.format.UCUMFormat.Variant.CASE_SENSITIVE;
+
 import java.util.ArrayList;
 import java.util.List;
 
 import javax.measure.Quantity;
-import javax.measure.Unit;
-import javax.measure.format.MeasurementParseException;
-import javax.money.CurrencyUnit;
-import javax.money.Monetary;
 import javax.money.MonetaryAmount;
 
-import org.javamoney.moneta.Money;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.data.convert.ReadingConverter;
 import org.springframework.data.convert.WritingConverter;
 import org.springframework.lang.NonNull;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import ca.zhoozhoo.loaddev.common.jackson.QuantityModuleSupport;
 import io.r2dbc.postgresql.codec.Json;
 import systems.uom.ucum.format.UCUMFormat;
-import tech.units.indriya.quantity.Quantities;
-
-import static systems.uom.ucum.format.UCUMFormat.Variant.CASE_SENSITIVE;
 
 /**
  * R2DBC converters for JSR-385 {@link Quantity} and JSR-354 {@link MonetaryAmount} types.
  * <p>
  * Provides bidirectional conversion between domain objects and PostgreSQL JSONB columns.
- * Quantity format: {@code {"value": 150, "unit": "[gr]"}}
+ * Quantity format (writer): {@code {"value": 150, "unit": "[gr]", "scale": "ABSOLUTE"}}
  * MonetaryAmount format: {@code {"amount": 45.99, "currency": "USD"}}
  * </p>
  *
@@ -41,7 +33,7 @@ import static systems.uom.ucum.format.UCUMFormat.Variant.CASE_SENSITIVE;
 public class R2dbcConverters {
 
     private static final UCUMFormat UCUM_FORMAT = UCUMFormat.getInstance(CASE_SENSITIVE);
-    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
+    private static final ObjectMapper OBJECT_MAPPER = QuantityModuleSupport.newObjectMapperWithQuantityModule();
 
     /**
      * Provides all R2DBC converters for JSR-385 and JSR-354 types.
@@ -54,6 +46,7 @@ public class R2dbcConverters {
         converters.add(new JsonToQuantityConverter());
         converters.add(new MonetaryAmountToJsonConverter());
         converters.add(new JsonToMonetaryAmountConverter());
+
         return converters;
     }
 
@@ -68,10 +61,8 @@ public class R2dbcConverters {
 
         @Override
         public Json convert(@NonNull Quantity<?> source) {
-            var value = source.getValue();
-            var unit = UCUM_FORMAT.format(source.getUnit());
-            var json = String.format("{\"value\":%s,\"unit\":\"%s\"}", value, unit);
-            return Json.of(json);
+            return Json.of("{\"value\":%s,\"unit\":\"%s\",\"scale\":\"%s\"}".formatted(source.getValue(),
+                    UCUM_FORMAT.format(source.getUnit()), source.getScale()));
         }
     }
 
@@ -87,32 +78,9 @@ public class R2dbcConverters {
         @Override
         public Quantity<?> convert(@NonNull Json source) {
             try {
-                JsonNode root = OBJECT_MAPPER.readTree(source.asString());
-                
-                var valueNode = root.get("value");
-                var unitNode = root.get("unit");
-                
-                if (valueNode == null) {
-                    throw new IllegalArgumentException("Missing 'value' field in Quantity JSON: " + source.asString());
-                }
-                if (unitNode == null) {
-                    throw new IllegalArgumentException("Missing 'unit' field in Quantity JSON: " + source.asString());
-                }
-                
-                var value = valueNode.decimalValue();
-                var unitString = unitNode.asText();
-                
-                Unit<?> unit = UCUM_FORMAT.parse(unitString, new ParsePosition(0));
-                if (unit == null) {
-                    throw new IllegalArgumentException("Failed to parse unit: " + unitString);
-                }
-                
-                return Quantities.getQuantity(value, unit);
-                
+                return OBJECT_MAPPER.readValue(source.asString(), Quantity.class);
             } catch (JsonProcessingException e) {
                 throw new IllegalArgumentException("Failed to parse Quantity JSON: " + source.asString(), e);
-            } catch (MeasurementParseException e) {
-                throw new IllegalArgumentException("Failed to parse unit in Quantity JSON: " + source.asString(), e);
             }
         }
     }
@@ -128,10 +96,11 @@ public class R2dbcConverters {
 
         @Override
         public Json convert(@NonNull MonetaryAmount source) {
-            var amount = source.getNumber().numberValue(BigDecimal.class);
-            var currency = source.getCurrency().getCurrencyCode();
-            var json = String.format("{\"amount\":%s,\"currency\":\"%s\"}", amount, currency);
-            return Json.of(json);
+            try {
+                return Json.of(OBJECT_MAPPER.writeValueAsString(source));
+            } catch (JsonProcessingException e) {
+                throw new IllegalArgumentException("Failed to write MonetaryAmount JSON", e);
+            }
         }
     }
 
@@ -147,26 +116,9 @@ public class R2dbcConverters {
         @Override
         public MonetaryAmount convert(@NonNull Json source) {
             try {
-                JsonNode root = OBJECT_MAPPER.readTree(source.asString());
-                
-                var amountNode = root.get("amount");
-                var currencyNode = root.get("currency");
-                
-                if (amountNode == null) {
-                    throw new IllegalArgumentException("Missing 'amount' field in MonetaryAmount JSON: " + source.asString());
-                }
-                if (currencyNode == null) {
-                    throw new IllegalArgumentException("Missing 'currency' field in MonetaryAmount JSON: " + source.asString());
-                }
-                
-                var amount = amountNode.decimalValue();
-                var currencyCode = currencyNode.asText();
-                
-                CurrencyUnit currency = Monetary.getCurrency(currencyCode);
-                return Money.of(amount, currency);
-                
+                return OBJECT_MAPPER.readValue(source.asString(), MonetaryAmount.class);
             } catch (JsonProcessingException e) {
-                throw new IllegalArgumentException("Failed to parse MonetaryAmount JSON: " + source.asString(), e);
+                throw new IllegalArgumentException("Failed to parse MonetaryAmount JSON: %s".formatted(source.asString()) , e);
             }
         }
     }
